# market-stats-viewer

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  START_HERE.md  app.py  make_release_zip.py  pyproject.toml  requirements.txt
data/: artist_registry.jp.seed.csv  artist_registry.manual.csv  artist_registry.seed.csv  event_signal_audit_report.json  event_signal_audit_report.md  event_signals.sqlite  events.sqlite  events_artist_inferred.csv  lp_events.json  market_stats.sqlite  meta.json  meta_airport_volume.json  meta_icd.json  meta_ta.json  meta_tcd.json  ticketjam_supplement_report.json  ticketjam_supplement_report.md  ticketjam_venue_pages.csv  venue_aliases.csv  venue_registry.csv  venue_web_discovery_config.json
docs/: DECISIONS.md  decision_log.md  event_signal_audit_automation.md  spec_airport_volume_data.md  spec_airport_volume_update_pipeline.md  spec_app.md  spec_data.md  spec_icd_data.md  spec_icd_update_pipeline.md  spec_ta_data.md  spec_ta_update_pipeline.md  spec_tcd_data.md  spec_tcd_update_pipeline.md  spec_update_pipeline.md
scripts/: audit_event_normalization_candidates.py  audit_kstyle_news_coverage.py  build_artist_registry_wikidata.py  build_event_signal_audit_report.py  build_events_artist_inferred.py  build_external_events_manifest.py  build_lp_events.py  build_ticketjam_supplement_report.py  ensure_venv.ps1  parse_ts_table.py  quick_validate_skill.py  setup.ps1  update_airport_volume_data.py  update_data.py  update_event_signals_data.py  update_events_data.py  update_icd_data.py  update_ta_data.py  (+3 more)
(+94 files in other folders)
